--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   </head>
   <body>
     <header class="header">
-      <div class="overlay"></div>
-      <nav class="flex flex-jc-sb flex-ai-c">
+      <div class="overlay has-fade"></div>
+      <nav class="container flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="EasyBank" />
         </a>
-        <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
+        <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
           <span></span>
           <span></span>
           <span></span>
@@ -54,6 +54,14 @@
           Request Invite
         </button>
       </nav>
+
+      <div class="header__menu has-fade">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+      </div>
     </header>
     Request Invite Next generation digital banking Take your financial life
     online. Your Easybank account will be a one-stop-shop for spending, saving,
