--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <body>
     <header class="header">
       <div class="overlay has-fade"></div>
-      <nav class="container flex flex-jc-sb flex-ai-c">
+      <nav class="container container--pall flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
           <img src="images/logo.svg" alt="EasyBank" />
         </a>
@@ -63,9 +63,22 @@
         <a href="#">Careers</a>
       </div>
     </header>
-    Request Invite Next generation digital banking Take your financial life
-    online. Your Easybank account will be a one-stop-shop for spending, saving,
-    budgeting, investing, and much more. Request Invite Why choose Easybank? We
+
+    <section class="hero">
+      <div class="container">
+        <div class="hero__image"></div>
+        <div class="hero__text container--pall">
+          <h1>Next generation digital banking</h1>
+          <p>
+            Take your financial life online. Your Easybank account will be a
+            one-stop-shop for spending, saving, budgeting, investing, and much
+            more.
+          </p>
+          <button class="button hero__cta">Request Invite</button>
+        </div>
+      </section>
+      </div>
+    <!-- Request Invite  Request Invite Why choose Easybank? We
     leverage Open Banking to turn your bank account into your financial hub.
     Control your finances like never before. Online Banking Our modern web and
     mobile applications allow you to keep track of your finances wherever you
@@ -94,6 +107,7 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
+    -->
     -->
     <script src="/app/js/script.js"></script>
   </body>
