--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
     />
     <!-- Font Family -->
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="/dist/style.css" />
+    <link rel="stylesheet" href="dist/style.css" />
     <title>Frontend Mentor | Easybank landing page</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -91,7 +91,7 @@
         <div class="feature__grid">
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-online.svg" alt="icon-api" />
+              <img src="images/icon-online.svg" alt="icon-api" />
             </div>
             <div class="feature__title">Online Banking</div>
             <div class="feature__description">
@@ -101,7 +101,7 @@
           </div>
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-budgeting.svg" alt="icon-api" />
+              <img src="images/icon-budgeting.svg" alt="icon-api" />
             </div>
             <div class="feature__title">Simple Budgeting</div>
             <div class="feature__description">
@@ -111,7 +111,7 @@
           </div>
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-onboarding.svg" alt="icon-api" />
+              <img src="images/icon-onboarding.svg" alt="icon-api" />
             </div>
             <div class="feature__title">Fast Onboarding</div>
             <div class="feature__description">
@@ -121,7 +121,7 @@
           </div>
           <div class="feature__item">
             <div class="feature__icon">
-              <img src="/images/icon-api.svg" alt="icon-api" />
+              <img src="images/icon-api.svg" alt="icon-api" />
             </div>
             <div class="feature__title">Open API</div>
             <div class="feature__description">
@@ -212,7 +212,7 @@
     <footer class="footer">
       <div class="container">
         <a href="#" class="footer__logo">
-          <img src="/images/logo-dark.svg" alt="logo" />
+          <img src="images/logo-dark.svg" alt="logo" />
         </a>
 
         <div class="footer__social">
