--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-restaurant.jpg')"
+              style="background-image: url('images/image-restaurant.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
@@ -157,7 +157,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-plane.jpg')"
+              style="background-image: url('images/image-plane.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -174,7 +174,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-confetti.jpg')"
+              style="background-image: url('images/image-confetti.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -191,7 +191,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-currency.jpg')"
+              style="background-image: url('images/image-currency.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
@@ -292,6 +292,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
-    <script src="/app/js/script.js"></script>
+    <script src="app/js/script.js"></script>
   </body>
 </html>
